--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "bootstrap": "^4.5.0",
     "concurrently": "^7.0.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
     "json-server": "^0.17.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
